<resources>
    <string name="app_name">SortirNice2022</string>
    <string name="home">Accueil</string>

    <string name="sortir_a_nice">Sortir à Nice</string>
    <string name="metropole">METROPOLE</string>
    <string name="toute_boutique">Toutes les boutiques</string>
    <string name="infos_pratiques">Infos pratiques</string>
    <string name="sans_categorie">Sans catégorie</string>
    <string name="evenements">Evenements</string>
    <string name="evenementsFavoris">Evenements Favoris</string>
    <string name="visites">Visites</string>
    <string name="sorties">Sorties</string>
    <string name="restaurants">Restaurants</string>
    <string name="boutiques">Boutiques</string>
    <string name="lieux_de_shopping">Lieux de Shopping</string>
    <string name="hotels">Hotels</string>
    <string name="hebergements">Hebergements</string>
    <string name="transports">Transports</string>
    <string name="adresses_utiles">Adresses Utiles</string>
    <string name="rechercher">Rechercher</string>
    <string name="rechercher_entries">Rechercher divers</string>
    <string name="mes_favoris">Favoris</string>
    <string name="services">Services</string>
    <string name="selectionner_tout">Selectionner Tout</string>
    <string name="couchage">Couchage</string>
    <string name="stations">Station</string>
    <string name="pratique">Pratique</string>
    <string name="animation">Animations</string>
    <string name="ambiance">Ambiance</string>
    <string name="categorie">Categories</string>
    <string name="chaine">Chaînes Hotelières</string>
    <string name="ville">Ville</string>
    <string name="type">Type</string>
    <string name="option_famille">Option Famille</string>
    <!-- TODO:  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_entry_first_connection">Veuillez patienter le traitement peut durer 1/4h (en fonction de votre connexion)</string>

    <string name="location">Lieu</string>
    <string name="activity">Activités</string>
    <string name="atmospher">Ambiances</string>
    <string name="furnishedRental">Type d\'étab</string>
    <string name="label">Label</string>
    <string name="service">Cuisines</string>
    <string name="standingLevel">Standing Level</string>
    <string name="total">Total - </string>

    <string name="room_count">room_count</string>
    <string name="sdb">Sdb - </string>
    <string name="room_bath_count">room_bath_count</string>
    <string name="douche">Douche - </string>
    <string name="room_shower_count">room_shower_count</string>
    <string name="suite">Suite - </string>
    <string name="suite_count">suite_count</string>
    <string name="studio">Studio - </string>
    <string name="studio_count">studio_count</string>
    <string name="appartement">Appartement: </string>
    <string name="apartment_count">apartment_count</string>
    <string name="accessible">Accessible - </string>
    <string name="room_accessible_count">room_accessible_count</string>
    <string name="simple">Simple - </string>
    <string name="single_count">single_count</string>
    <string name="doubleRoom">Double - </string>
    <string name="double_count">double_count</string>
    <string name="triple">Triple - </string>
    <string name="triple_count">triple_count</string>
    <string name="twin">Twin - </string>
    <string name="twins_count">twins_count</string>
    <string name="famille">Famille - </string>
    <string name="family_count">family_count</string>
    <string name="surface">Surface: </string>
    <string name="area">area</string>
    <string name="typeTitre">Type - </string>
    <string name="etage">Etage - </string>
    <string name="floor">floor</string>
    <string name="bedroom_count">bedroom_count</string>
    <string name="sleeps_count">sleeps_count</string>
    <string name="furnished_room_count">furnished_room_count</string>
    <string name="atmosphere">Atmosphere: </string>
    <string name="atmospherText">atmospher</string>
    <string name="serviceTitre">Cuisines: </string>
    <string name="serviceText">Cuisines</string>
    <string name="lieu">Lieu: </string>
    <string name="locationText">location</string>
    <string name="address_line1">address_line1</string>
    <string name="address_line2">address_line2</string>
    <string name="address_line3">address_line3</string>
    <string name="adress_zip">adress_zip</string>
    <string name="adress_city">adress_city</string>
    <string name="station">station</string>
    <string name="tel">Tel: </string>
    <string name="phone">phone</string>
    <string name="fax">Fax: </string>
    <string name="faxText">fax</string>
    <string name="iconeEmail">\@: </string>
    <string name="email">email</string>
    <string name="site">Site: </string>
    <string name="website">website</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="paiements">Paiements: </string>
    <string name="ouvert">Ouvert: </string>
    <string name="payment">payment</string>
    <string name="opening">opening</string>
    <string name="openings">openings</string>
    <string name="ferme">Ferme: </string>
    <string name="closure">closure</string>
    <string name="closing">closing</string>
    <string name="closings">closings</string>
    <string name="labelTitre">Label: </string>
    <string name="labelText">label</string>
    <string name="animationTitre">Animation: </string>
    <string name="animationText">animation</string>
    <string name="option">Option: </string>
    <string name="optionText">option</string>
    <string name="pratiqueTitre">Equipements: </string>
    <string name="amenity">Equipements</string>
    <string name="capacit">Capacité: </string>

    <string name="capacity_total">capacity_total</string>
    <string name="int_rieur">Intérieur - </string>
    <string name="capacity_interieur">capacity_interieur</string>
    <string name="ext_rieur">Extérieur - </string>
    <string name="capacity_exterieur">capacity_exterieur</string>
    <string name="debout">Debout - </string>
    <string name="capacity_debout">capacity_debout</string>
    <string name="groupe">Groupe - </string>
    <string name="capacity_group">capacity_group</string>
    <string name="salle">Salle - </string>
    <string name="capacity_salle">capacity_salle</string>
    <string name="sector">Sector - </string>
    <string name="secto">secto</string>
    <string name="capacity_assis">capacity_assis</string>
    <string name="assis">Assis - </string>
    <string name="periode">periode</string>
    <string name="couchageTitre">Couchage: </string>
    <string name="couchageText">couchage</string>
    <string name="chambre">Chambre: </string>
    <string name="description">description</string>
    <string name="category">category</string>
    <string name="name_fr">name_fr</string>
    <string name="standing">Standing: </string>
    <string name="standingText">standing</string>
    <string name="style">Style: </string>
    <string name="meuble">meuble</string>
    <string name="periode_locative">Periode Locative: </string>

    <string name="wait">Patientez...</string>
    <string name="aucun_favoris">Vous n\'avez enregistré aucun favori pour le moment</string>

    <string name="accueil">Accueil</string>
    <string name="divers">Divers</string>
    <string name="diversFavoris">Divers Favoris</string>
    <string name="textOfficeTourisme">App non-officielle de l\'Office du Tourisme Métropolitain Nice Côte d\'Azur.\nSeules les données fournies par celui-ci sont exploitées.\nPour de plus amples informations, visiter le site officiel.</string>
    <string name="urlOfficeTourisme">http://www.nicetourisme.com/</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="descriptif">Découvrez les meilleurs spots pour vos sorties\nRepérez les plus beaux lieux à visiter\n
    Trouvez votre hébergement etc...\n
    Agenda de tous les évènements culturels à venir à Nice et ses environs</string>
    <string name="trier_selon">Trier selon:</string>
    <string name="tri1">tri1</string>
    <string name="tri2">tri2</string>


</resources>
