<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.AccueilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="36dip"
            android:onClick="afficherEvents"
            android:text="@string/evenements"
            app:icon="@drawable/outline_theater_comedy_white_18" />

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesVisite"
            android:text="@string/visites"
            app:icon="@drawable/outline_museum_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>


        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesSortie"
            android:text="@string/sorties"
            app:icon="@drawable/outline_nightlife_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesRestaurant"
            android:text="@string/restaurants"
            app:icon="@drawable/outline_restaurant_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesBoutique"
            android:text="@string/boutiques"
            app:icon="@drawable/outline_storefront_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesShopping"
            android:text="@string/lieux_de_shopping"
            app:icon="@drawable/outline_local_mall_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesHotel"
            android:text="@string/hotels"
            app:icon="@drawable/outline_hotel_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesHebergement"
            android:text="@string/hebergements"
            app:icon="@drawable/outline_night_shelter_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>


        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesTransport"
            android:text="@string/transports"
            app:icon="@drawable/outline_commute_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>



        <Button
            android:maxHeight="36dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="afficherEntriesUtile"
            android:text="@string/adresses_utiles"
            app:icon="@drawable/outline_not_listed_location_white_18"
            style="@style/Widget.MaterialComponents.Button.Icon"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="labeled"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
