<?xml version="1.0" encoding="utf-8"?>


    <!-- 1 | MainActivity RootView -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NavDrawerEntryActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolBarStyle" />

    <LinearLayout
        android:id="@+id/switch_and_chips_choix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="events" />

                <RadioButton
                    android:id="@+id/radio_button_entries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="entries" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <ImageView
                android:id="@+id/btn_afficher_type_entries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/outline_arrow_drop_up_black_24" />
            </LinearLayout>

        </RadioGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_boutique"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutiques"
                app:chipIcon="@drawable/outline_storefront_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hebergement"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hebergements"
                app:chipIcon="@drawable/outline_night_shelter_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hotel"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotels"
                app:chipIcon="@drawable/outline_hotel_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_restaurant"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                app:chipIcon="@drawable/outline_restaurant_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shopping"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lieux_de_shopping"
                app:chipIcon="@drawable/outline_local_mall_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sortie"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorties"
                app:chipIcon="@drawable/outline_nightlife_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_transport"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transports"
                app:chipIcon="@drawable/outline_commute_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_utile"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresses_utiles"
                app:chipIcon="@drawable/outline_not_listed_location_black_18"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_visit"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visites"
                app:chipIcon="@drawable/outline_museum_black_18"
                app:closeIconVisible="false" />


        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_event"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_and_chips_choix">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFiltre"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="10dip"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar"

        app:srcCompat="@drawable/outline_playlist_add_check_white_24"

        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRazFiltre"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="10dip"

        android:visibility="gone"

        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/fabFiltre"
        app:srcCompat="@drawable/outline_remove_done_white_24"
        app:tint="@android:color/white" />


    <!-- afficher filtre -->

    <ScrollView
        android:id="@+id/scrollView_filtre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar">

        <include layout="@layout/afficher_filtre_entry" />


    </ScrollView>


    <!-- afficher detail -->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/layout_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar">

        <include layout="@layout/afficher_detail_entry" />


    </ScrollView>

    <include layout="@layout/fab_save_exit" />

</androidx.constraintlayout.widget.ConstraintLayout>