<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.AfficherFavorisActivity"
    android:background="@drawable/nice">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textFavoriVide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_view_detail_large"
        android:layout_marginTop="@dimen/text_view_detail_middle"
        android:layout_marginEnd="@dimen/text_view_detail_large"
        android:layout_marginBottom="@dimen/text_view_detail_middle"
        android:gravity="center_horizontal"
        android:text="@string/aucun_favoris"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar"/>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFavoriVide">

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnEventFavori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evenementsFavoris"
            style="@style/Widget.MaterialComponents.Button"
            android:onClick="afficherEvenementsFavoris"
            android:layout_marginBottom="15dip"
            app:icon="@drawable/outline_event_black_24"
            />






        <Button
            android:id="@+id/btnEntryFavori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diversFavoris"
            style="@style/Widget.MaterialComponents.Button"
            android:onClick="afficherEntriesFavoris"
            android:layout_marginBottom="15dip"
            app:icon="@drawable/outline_search_black_24"
            />




    </LinearLayout>



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />



</androidx.constraintlayout.widget.ConstraintLayout>
